<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UPC</string>
    <string name="google_places_api_key">AIzaSyC5mTsDhjayzCqXH87ggEYsfswR1cStfX8</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="ga_trackingId">UA-1209598-33</string>
    <string name="pe.edu.upc.mobile.UPCMovil.IntranetActivity">Intranet</string>
    <string name="pe.edu.upc.mobile.UPCMovil.DetalleNotaActivity">DetalleNota</string>
    <string name="pe.edu.upc.mobile.UPCMovil.EventosActivity">Eventos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.HorarioActivity">Horario</string>
    <string name="pe.edu.upc.mobile.UPCMovil.InasistenciaActivity">Inasistencias</string>
    <string name="pe.edu.upc.mobile.UPCMovil.NotasActivity">Notas</string>
    <string name="pe.edu.upc.mobile.UPCMovil.CursosActivity">Cursos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.NoticiasActivity">Noticias</string>
    <string name="pe.edu.upc.mobile.UPCMovil.PagosActivity">Pagos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.TramitesActivity">Tramites</string>
    <string name="pe.edu.upc.mobile.UPCMovil.Campus">Campus</string>
    <string name="pe.edu.upc.mobile.UPCMovil.DetalleCampus">DetalleCampus</string>
    <string name="pe.edu.upc.mobile.UPCMovil.ARActivity">AR</string>
    <string name="pe.edu.upc.mobile.UPCMovil.CompanerosActivity">Companeros</string>
    <string name="pe.edu.upc.mobile.UPCMovil.EspaciosDeportivosActivity">EspaciosDeportivos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.DisponibilidadEspaciosDeportivosActivity">DisponibilidadEspaciosDeportivos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.ReservarEspaciosDeportivosActivity">ReservarEspaciosDeportivos</string>
    <string name="pe.edu.upc.mobile.UPCMovil.CubiculosComputadorasActivity">CubiculosComputadoras</string>
    <string name="pe.edu.upc.mobile.UPCMovil.DisponibilidadCubiculosComputadorasActivity">DisponibilidadCubiculosComputadoras</string>
    <string name="pe.edu.upc.mobile.UPCMovil.ReservarCubiculosComputadorasActivity">ReservarCubiculosComputadoras</string>
    <string name="content_description_menu">Application Menu</string>
    <string name="content_description_pin">Icono pin</string>
    <string name="detalle_nota_formula">FORMULA:</string>
    <string name="detalle_nota_tipo">TIPO</string>
    <string name="detalle_nota_peso">PESO</string>
    <string name="detalle_nota_nota">NOTA</string>
    <string name="detalle_nota_nota_actual">NOTA ACTUAL</string>
    <string name="inasistencia_curso">CURSO</string>
    <string name="inasistencia_total">TOTAL</string>
    <string name="inasistencia_max">MAX</string>
    <string name="splash_message">exígete, innova</string>
    <string name="content_description_logo">Logo UPC</string>
    <string name="intranet_instrucciones">Ingresa tu usuario y contraseña</string>
    <string name="intranet_usuario">Usuario</string>
    <string name="intranet_contrasena">Contraseña</string>
    <string name="intranet_recordarcontrasena">Recordar contraseña</string>
    <string name="content_description_ingresar_button">Ingresar Button</string>
    <string name="content_description_consultar_button">Consultar Button</string>
    <string name="content_description_reservar_button">Reservar Button</string>
    <string name="content_description_menu_option">Menu Option Logo</string>
    <string name="pagos_nro_documento">Nro. documento</string>
    <string name="pagos_fecha_emision">Fecha emisión</string>
    <string name="pagos_fecha_vencim">Fecha vencim.</string>
    <string name="pagos_moneda">Moneda</string>
    <string name="pagos_importe">Importe</string>
    <string name="pagos_descuento">Descuento</string>
    <string name="pagos_impuesto">Impuesto</string>
    <string name="pagos_importe_cancelado">Importe cancelado</string>
    <string name="pagos_mora">Mora</string>
    <string name="pagos_saldo">Saldo</string>
    <string name="pagos_total">Total</string>
    <string name="tramites_nro_solicitud">Nro. Solicitud</string>
    <string name="tramites_fecha">Fecha</string>
    <string name="tramites_estado">Estado</string>
    <string name="tramites_tipo_tramite">Tipo de trámite</string>
    <string name="content_description_splashscreen">Splash Screen</string>
    <string name="content_description_classmates">Compañero</string>
    <string name="content_description_classmates_picture">Foto compañero</string>
    <string name="disponibilidad_disponible">Disponible</string>
    <string name="disponibilidad_reservar">Reservar</string>
    <string name="reservar_espacio_deportivo_titulo">Confirme los detalles de su reserva</string>
    <string name="reservar_espacio_deportivo_fecha">Fecha</string>
    <string name="reservar_espacio_deportivo_actividad">Actividad</string>
    <string name="reservar_cubiculo_computadora_recurso">Recurso</string>
    <string name="reservar_espacio_deportivo_hora">Hora de Reserva</string>
</resources>
